refactor: enhance OTP service with caching and email functionality