@@ -15,12 +15,13 @@ public class TimeUtils {
     public static final LocalDateTime SAFE_MAX_DATE = LocalDateTime.of(9999, 12, 31, 23, 59, 59);
 
     public static final String DEFAULT_TIMEZONE = "Asia/Ho_Chi_Minh";
+    public static final String DEFAULT_PATTERN = "dd/MM/yyyy HH:mm:ss";
 
     private static String format(LocalDateTime dateTime, String pattern) {
         if (dateTime == null)
             return null;
         if (pattern == null)
-            pattern = "dd/MM/yyyy HH:mm:ss";
+            pattern = DEFAULT_PATTERN;
         return dateTime.format(DateTimeFormatter.ofPattern(pattern));
     }
 
@@ -31,39 +32,33 @@ public class TimeUtils {
     }
 
     /**
-     * Convert từ UTC LocalDateTime sang String theo Timezone của User
-     * Dùng cho việc hiển thị email, xuất file, sms...
-     * * @param utcDateTime Thời gian gốc (đang lưu là UTC trong DB)
+     * Convert {@link Instant} (UTC) sang String theo timezone của user.
      *
-     * @param zoneId  Timezone của user (VD: "Asia/Ho_Chi_Minh")
-     * @param pattern Định dạng mong muốn (null sẽ lấy mặc định)
-     * @return String thời gian đã convert
+     * <p>Đây là method core, toàn bộ overload khác sẽ delegate về đây.</p>
+     *
+     * @param instant  Thời gian UTC (chuẩn nên lưu trong DB)
+     * @param zoneId   Timezone đích (VD: "Asia/Ho_Chi_Minh"), nếu null sẽ dùng mặc định
+     * @param pattern  Format output (VD: "dd/MM/yyyy HH:mm:ss"), nếu null sẽ dùng mặc định
+     * @return String đã format theo timezone user, hoặc null nếu input null
      */
-    public static String formatToUserZone(LocalDateTime utcDateTime, String zoneId, String pattern) {
-        if (utcDateTime == null) return null;
+    public static String formatToUserZone(Instant instant, String zoneId, String pattern) {
+        if (instant == null) return null;
 
-        // Validate inputs
-        if (pattern == null) pattern = "dd/MM/yyyy HH:mm:ss";
-        if (zoneId == null || zoneId.trim().isEmpty()) zoneId = DEFAULT_TIMEZONE;
+        if (pattern == null || pattern.isBlank()) {
+            pattern = DEFAULT_PATTERN;
+        }
+
+        if (zoneId == null || zoneId.isBlank()) {
+            zoneId = DEFAULT_TIMEZONE;
+        }
 
         try {
-            // Bước 1: Định nghĩa rằng cái utcDateTime này ĐANG LÀ UTC
-            ZonedDateTime utcZoned = utcDateTime.atZone(ZoneId.of("UTC"));
-
-            // Bước 2: Tìm múi giờ đích
-            ZoneId userZone = ZoneId.of(zoneId);
-
-            // Bước 3: Dịch chuyển thời gian (Shift time)
-            ZonedDateTime userZoned = utcZoned.withZoneSameInstant(userZone);
-
-            // Bước 4: Format
-            return userZoned.format(DateTimeFormatter.ofPattern(pattern));
-
+            ZonedDateTime zonedDateTime = instant.atZone(ZoneId.of(zoneId));
+            return zonedDateTime.format(DateTimeFormatter.ofPattern(pattern));
         } catch (Exception e) {
-            // Trường hợp user nhập timezone bậy bạ (VD: "Mars/Alien")
-            // Fallback về mặc định hiển thị giờ gốc hoặc log error
-            log.warn("[system]: Error converting timezone for UTC date '{}' to zone '{}' with pattern '{}'. Falling back to default format. Error: {}", utcDateTime, zoneId, pattern, e.getMessage());
-            return format(utcDateTime, pattern);
+            log.warn("[TimeUtils] Failed to format instant '{}' to zone '{}' with pattern '{}'. Fallback to ISO. Error: {}",
+                    instant, zoneId, pattern, e.getMessage());
+            return instant.toString(); // ISO-8601 fallback
         }
     }
     public static Date toDate(Instant instant) {
